[package]
name = "multipart_rs_multer"
version = "0.1.0"
edition = "2021"

[dependencies]
multer = "3.1.0"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = {version = "0.1.15", features = ["full"] }
mime = "0.3.16"
base64 = "0.22.1"
once_cell = "1.19.0"
thread_local = "1.1.8"


[lib]
crate-type = ["staticlib"]